# face_platform

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  face_platform.cbp  main.cpp
doc/: introduction.vsdx
face_api/: CMakeLists.txt  face_api.cpp  face_api.h  main.cpp
models/alignment/: CMakeLists.txt
models/data_preprocess/: CMakeLists.txt  Makefile  cmake_install.cmake  data_preprocess.cbp  data_preprocess.cpp  data_preprocess.h
models/data_source/: CMakeLists.txt  Makefile  data_source.cbp  data_source.cpp  data_source.h
models/detection_alignment/: CMakeLists.txt  Makefile  cmake_install.cmake  common.h  detection_alignment.cpp  detection_alignment.h
models/recognization/: CMakeLists.txt  Makefile  cmake_install.cmake  common_recognization.h  recognization.cbp  recognization.cpp  recognization.h
