cmake_minimum_required(VERSION 3.10)
project(face_platform)
find_package(OpenCV REQUIRED)
find_package(dlib REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ./ ./models/data_source ./models/data_preprocess ./models/detection_alignment ./models/recognization)
include(/usr/local/lib/cmake/dlib/dlib.cmake)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory("./models/data_source")
add_subdirectory("./models/data_preprocess")
add_subdirectory("./models/detection_alignment")
add_subdirectory("./models/recognization")
aux_source_directory(. DIRSRCS)
add_executable(face_platform ${DIRSRCS})
set(CMAKE_CXX_STANDARD 11)
target_link_libraries(face_platform ${OpenCV_LIBS} dlib::dlib data_source data_preprocess detection_alignment recognization)