cmake_minimum_required(VERSION 3.10)
project(data_preprocess)

find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
#add_executable(data_preprocess data_preprocess.cpp)
set(CMAKE_CXX_STANDARD 11)
aux_source_directory(. DIR_DATA_PREPROCESS)
add_library(data_preprocess ${DIR_DATA_PREPROCESS})
target_link_libraries(data_preprocess ${OpenCV_LIBS})