cmake_minimum_required(VERSION 3.10)
project(data_source)

find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
add_executable(data_source data_source.cpp)
set(CMAKE_CXX_STANDARD 11)
target_link_libraries(data_source ${OpenCV_LIBS})