cmake_minimum_required(VERSION 3.10)
project(recognization)

find_package(OpenCV REQUIRED)
find_package(dlib REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
include(/usr/local/lib/cmake/dlib/dlib.cmake)
set(CMAKE_CXX_STANDARD 11)
#add_executable(recognization recognization.cpp)
set(CMAKE_CXX_STANDARD 11)
aux_source_directory(. DIR_RECOGNIZATION)
add_library(recognization ${DIR_RECOGNIZATION})
target_link_libraries(recognization ${OpenCV_LIBS} dlib::dlib)